Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39677

QAlsaAudioOutput::stop() can hang

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.2
    • 5.3.0
    • Multimedia
    • None
    • Ubuntu 12.04, 14.04
    • a63da4b5935bcb1e1fbba6f3156e7dfa60c90782

    Description

      This may be a duplicate of a closed bug:
      https://bugreports.qt-project.org/browse/QTBUG-10729

      We compile Qt with ALSA support, but no PulseAudio.

      Our program was hanging when playing audio. It appears that QAlsaAudioOutput::stop() can hang in the call to "snd_pcm_drain(handle)".

      The attached sample program hangs within a few seconds on Ubuntu 12.04 (32 or 64 bit) and Ubuntu 14.04 (64-bit).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            dzedsystems Dyami Caliri
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes